# scholium

./: .gitignore  CONTEXT.md  README.md  package.json  pnpm-lock.yaml  test-pdfkit-text.swift  test.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: ocr.swift
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: messages.rs  mod.rs  ocr.rs  threads.rs
src/lib/: types.ts
src/lib/components/: PdfViewer.svelte
src/lib/stores/: app.svelte.ts
src/routes/: +page.svelte
